@@ -1,5 +1,11 @@
 2016-01-30  Adhemerval Zanella  <adhemerval.zanella@linaro.org>
 
+	* nptl/nptl-init.c (sigaddset_cancel): New macro.
+	(sigcancel_handler): Use sigaddset_cancel instead of __sigaddset.
+	* sysdeps/unix/sysv/linux/ia64/sysdep-cancel.h (__pthread_get_pc):
+	New function.
+	(sigaddset_cancel): New macro.
+
 	* sysdeps/unix/sysv/linux/s390/s390-32/sysdep-cancel.h
 	(__pthread_get_pc): New function.
 	* sysdeps/unix/sysv/linux/s390/s390-64/sysdep-cancel.h
